test/development/acceptance/__snapshots__/ReactRefreshLogBox.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox default boundaries 1`] = `
"FunctionDefault.js (1:51) @ FunctionDefault

> 1 | export default function FunctionDefault() { throw new Error('no'); }
    |                                                   ^"
`;

exports[`ReactRefreshLogBox default conversion to class component (1) 1`] = `
"Child.js (4:11) @ ClickCount.render

  2 | export default class ClickCount extends Component {
  3 |   render() {
> 4 |     throw new Error()
    |           ^
  5 |   }
  6 | }"
`;

exports[`ReactRefreshLogBox default css syntax errors 1`] = `
"./index.module.css (1:1)
Syntax error: Selector "button" is not pure (pure selectors must contain at least one local class or id)

> 1 | button {}
    | ^"
`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 1`] = `"Error: end https://nextjs.org"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 2`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 3`] = `"Error: https://nextjs.org start"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 4`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 5`] = `"Error: middle https://nextjs.org end"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 6`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 8`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox default logbox: anchors links in error messages 10`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox default module init error not shown 1`] = `
"index.js (3:7) @ eval

  1 | // top offset for snapshot
  2 | import * as React from 'react';
> 3 | throw new Error('no')
    |       ^
  4 | class ClassDefault extends React.Component {
  5 |   render() {
  6 |     return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox default should strip whitespace correctly with newline 1`] = `
"index.js (8:27) @ onClick

   6 |
   7 |                   <a onClick={() => {
>  8 |                     throw new Error('idk')
     |                           ^
   9 |                   }}>
  10 |                     click me
  11 |                   </a>"
`;

exports[`ReactRefreshLogBox turbo boundaries 1`] = `
"FunctionDefault.js (1:51) @ FunctionDefault

> 1 | export default function FunctionDefault() { throw new Error('no'); }
    |                                                   ^"
`;

exports[`ReactRefreshLogBox turbo conversion to class component (1) 1`] = `
"Child.js (4:11) @ ClickCount.render

  2 | export default class ClickCount extends Component {
  3 |   render() {
> 4 |     throw new Error()
    |           ^
  5 |   }
  6 | }"
`;

exports[`ReactRefreshLogBox turbo css syntax errors 1`] = `
"./index.module.css
Parsing css source code failed
Selector is not pure (pure selectors must contain at least one local class or id), (lightningcss, Selector(button, specificity = 0x1))"
`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 1`] = `"Error: end https://nextjs.org"`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 2`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 3`] = `"Error: https://nextjs.org start"`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 4`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 5`] = `"Error: middle https://nextjs.org end"`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 6`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 8`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox turbo logbox: anchors links in error messages 10`] = `"https://nextjs.org/"`;

exports[`ReactRefreshLogBox turbo module init error not shown 1`] = `
"index.js (3:7) @ [project]/index.js [ssr] (ecmascript)

  1 | // top offset for snapshot
  2 | import * as React from 'react';
> 3 | throw new Error('no')
    |       ^
  4 | class ClassDefault extends React.Component {
  5 |   render() {
  6 |     return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox turbo should strip whitespace correctly with newline 1`] = `
"index.js (8:27) @ onClick

   6 |
   7 |                   <a onClick={() => {
>  8 |                     throw new Error('idk')
     |                           ^
   9 |                   }}>
  10 |                     click me
  11 |                   </a>"
`;
